# remmina-plugin-webkit

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  index.html  params.json
remmina-gtkwebkit-browser/: CMakeLists.txt
remmina-gtkwebkit-browser/src/: remmina-gtkwebkit-browser.c
remmina-plugin-webkit/: CMakeLists.txt
remmina-plugin-webkit/src/: plugin_config.h  remmina_plugin.c
